fixed z-index issue
iframe after adding scroll effect made clickable links broken

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
   [ 3 ] = Blog header
    [ 4 ] = Drive iframe (CLAUDE)
 [ 5 ] = HIGHLIGHTS SECTION 
-
+[ 6 ] = BOTTOM BAR
 */
 
 
@@ -22,32 +22,29 @@ td {
   border-radius: 10px;
 }
 
-
-
-/* TOP BAR CSS [ 1 ] */
-
-body {
-  margin: 0;
-  font-family: Helvetica;
-}
-
-.topnav {
-  overflow: hidden;
-  background-color: #333;
-  display: flex; /* Use Flexbox */
-  justify-content: flex-end; /* Align items to the right */
-}
-
 /*    .topnav3     */
 /* FOR BLOGGER IFRAME HEADER */
 
-.topnav3 {
+.topnav-3 {
   overflow: hidden;
   background-color: #333;
   border-radius: 15px 15px 0 0;
 }
 
-.topnav a {
+/* TOP BAR CSS [ 1 ] */
+
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.topnav-1 {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav-1 a {
+  float: right;
   color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
@@ -55,14 +52,15 @@ body {
   font-size: 17px;
 }
 
-.topnav a:hover {
+.topnav-1 a:hover {
   background-color: #ddd;
   color: black;
 }
 
-.topnav a.active {
+.topnav-1 a.active {
   background-color: #197dd5;
   color: white;
+  text-align: center;
 }
 
 /*blog windows css [ 2 ]*/
@@ -70,7 +68,7 @@ body {
 /* Hide scrollbars for Chrome, Safari and Opera */
 
 
-.top-bar2 {
+.top-bar-2 {
   position: relative;
   width: 100%;
   height: 150px;
@@ -82,7 +80,7 @@ body {
 
 }
 
-.iframe-container2 {
+.iframe-container-2 {
   width: 100%;
   height: 200%;
   overflow: hidden;
@@ -90,7 +88,7 @@ body {
 
 }
 
-.iframe-container2 iframe {
+.iframe-container-2 iframe {
   width: 103%;
   height: 200%;
   border: none;
@@ -132,7 +130,7 @@ body {
 /*View More*/
 
 
-.view-more-link2 {
+.view-more-link-2 {
   float: right;
   position: relative;
   bottom: 40px;
@@ -145,21 +143,21 @@ body {
   text-decoration: none;
   border-radius: 4px;
   font-weight: bold;
-  z-index: 10;
+  z-index: -1;
   transition: background-color 0.3s;
 }
 
-.view-more-link:hover {
+.view-more-link-2:hover-2 {
   background-color: #004c99;
 }
 
-.content2 {
+.content-2 {
   padding: 20px;
 
 }
 
 /* Overlay to prevent iframe interaction */
-.overlay2 {
+.overlay-2 {
   /* float: right; */
   position: absolute;
   top: 0;
@@ -167,7 +165,7 @@ body {
   width: 100%;
   height: 100%;
   background: transparent;
-  z-index: 5;
+  z-index: -1;
 }
 
 
@@ -204,7 +202,7 @@ body {
   position: absolute;
   top: 10px;
   right: 10px;
-  z-index: 1000;
+  /* z-index: 0; */
   background: rgba(255, 255, 255, 0.9);
   padding: 5px;
   border-radius: 5px;
@@ -228,17 +226,12 @@ body {
   cursor: pointer;
 }
 
-.button-4:hover {
+.button-4:hover-4 {
   background: #0056b3;
 }
 
 /* HIGHLIGHTS SECTION [ 5 ] */
 
-body {
-  background-color: #1a1a1a;
-  /* color: #ffffff; */
-  font-family: Helvetica;
-}
 
 .container-5 {
   background-color: #000000c5;
@@ -331,7 +324,7 @@ body {
 
 /*BOTTOM BAR CSS*/
 
-.navbar {
+.navbar-5 {
   overflow: hidden;
   background-color: #333;
   position: fixed;
@@ -340,7 +333,7 @@ body {
   z-index: 1000;
 }
 
-.navbar a {
+.navbar-5 a {
   float: right;
   display: block;
   color: #f2f2f2;
@@ -350,12 +343,12 @@ body {
   font-size: 17px;
 }
 
-.navbar a:hover {
+.navbar-5 a:hover {
   background: #f1f1f1;
   color: black;
 }
 
-.navbar a.active {
+.navbar-5 a.active {
   background-color: #197dd5;
   color: white;
 }
